# jupyter_ascending

./: .gitignore  MANIFEST.in  README.md  codecov.yml  jupyter_ascending.json  makefile  mypy.ini  pyproject.toml  readthedocs.yml  setup.py
docs/: OTHER_EDITORS.md  PYCHARM.md  VSCODE.md
jupyter_ascending/: __init__.py  _environment.py  _frontend.py  _version.py  errors.py  extension.py  functional.py  json_requests.py  logger.py  utils.py  widget.py
jupyter_ascending/handlers/: __init__.py  jupyter_notebook.py  jupyter_server.py  server_extension.py
jupyter_ascending/labextension/: jupyter_ascending-0.1.0.tgz
jupyter_ascending/nbextension/: __init__.py
jupyter_ascending/nbextension/static/: extension.js  index.js  index.js.map
jupyter_ascending/notebook/: data_types.py  evolve.py  merge.py
jupyter_ascending/requests/: __init__.py  client_lib.py  execute.py  execute_all.py  get_status.py  readme.md  restart.py  sync.py
jupyter_ascending/scripts/: make_pair.py
jupyter_ascending/tests/: test_cell_matching.py  test_execute_request.py  test_nbextension_path.py  test_notebook_matching.py
jupyter_ascending/watchers/: file_watcher.py
media/: demo.webm
test/: test.sync.ipynb  test.sync.py
