[tool.poetry]
name = "jupyter_ascending"
# Make sure to also update _version.py when doing version bump.
version = "0.1.24"
description = ""
authors = ["Josh Albrecht <joshalbrecht@gmail.com>", "TJ DeVries <devries.timothyj@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
jupytext = "^1.14.4"
jsonrpcserver = {extras = ["requests"], version = "^4.1.2"}
jsonrpcclient = {extras = ["requests"], version = "^3.3.5"}
loguru = ">=0.4.1"
edlib = "^1.3.8"

[tool.poetry.dev-dependencies]
python-language-server = {extras = ["all"], version = "^0.31.9"}
pyls-mypy = "^0.1.8"
pyfixfmt = "^0.9.0"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


