[tool.poetry]
name = "jupyter_ascending"
# Make sure to also update _version.py when doing version bump.
version = "0.1.26"
description = ""
authors = ["Josh Albrecht <joshalbrecht@gmail.com>", "TJ DeVries <devries.timothyj@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupytext = "^1.14.4"
jsonrpcserver = "^5.0.9"
jsonrpcclient = "^4.0.3"
loguru = ">=0.4.1"
editdistance = "^0.6.2"
requests = "^2.31.0"
aiohttp = "^3.8.4"

[tool.poetry.dev-dependencies]
python-language-server = {extras = ["all"], version = "^0.31.9"}
pyls-mypy = "^0.1.8"
pyfixfmt = "^0.9.0"
pytest = ">=7.2.0"
pytest-asyncio = ">=0.20.3"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


